--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
 <body bgcolor="green">
+  <p style="color: blue; font-size:100px">
+    this is a website for testing 
+    no chances for improvement will be there 
+  </p>
 </body>
 </html>
