--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body bgcolor="powderblue">
-  <p style="color: pink; font-size:100px">
+  <p style="color: red; font-size:100px">
     this is a website for testing 
     no chances for improvement will be there 
   </p>
