--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <html>
 <body bgcolor="powderblue">
-  <p style="color: red; font-size:100px">
-    this is a website for testing 
-    no chances for improvement will be there 
-  </p>
+  <p color="gold"> welcome to the site </p>
 </body>
 </html>
